cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_BUILD_TYPE Debug)

project(snake)
add_executable(snake src/main.cpp src/setup.cpp src/draw.cpp src/input.cpp src/logic.cpp src/printMenu.cpp src/menuInput.cpp src/inputAi.cpp)
target_include_directories(snake PUBLIC ../include)
find_library(ncurses ncurses)
target_link_libraries(snake PUBLIC ${ncurses})